localhost-ingress-final.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localhost-ingress-final
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.priority: "500"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - localhost
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: localhost
            port:
              number: 8000
